# monkey

./: cabal.project  flake.nix  monkey.cabal
app/: Main.hs
app/Monkey/: Options.hs
src/: Monkey.hs
src/Monkey/: Interpreter.hs  Parser.hs  Syntax.hs
src/Monkey/Interpreter/: Error.hs  Value.hs
